# inkbox

./: .gitignore  LICENSE  README.md
.github/workflows/: tests.yml
examples/python/: agent_send_email.py  create_agent_mailbox.py  create_agent_phone_number.py  list_agent_phone_numbers.py  list_calls.py  list_messages_and_threads.py  list_phone_numbers.py  (+10 more)
python/: .coverage  README.md  SDK_METHODS.md  publish.sh  pyproject.toml
python/inkbox/: __init__.py  agent.py  agent_identity.py  client.py  signing_keys.py
python/inkbox/identities/: __init__.py  client.py  types.py
python/inkbox/identities/resources/: identities.py
python/inkbox/mail/: __init__.py  _http.py  client.py  types.py
python/inkbox/mail/resources/: __init__.py  mailboxes.py  messages.py  threads.py  webhooks.py
python/inkbox/phone/: __init__.py  client.py  types.py
python/inkbox/phone/resources/: __init__.py  calls.py  numbers.py  webhooks.py
python/inkbox_mail/: __init__.py  _http.py  client.py  exceptions.py  types.py
python/inkbox_mail/resources/: __init__.py  mailboxes.py  messages.py  threads.py  webhooks.py
python/tests/: conftest.py  sample_data.py  sample_data_mail.py  test_calls.py  test_client.py  test_identities.py  test_identities_client.py  test_identities_types.py  test_mail_client.py  test_mail_mailboxes.py  test_mail_messages.py  test_mail_types.py  test_mail_webhooks.py  test_numbers.py  test_signing_keys.py  test_transcripts.py  test_types.py  test_webhooks.py
scripts/: test_phone.py  test_phone.ts
typescript/: README.md  package.json  tsconfig.json
(+52 files in other folders)
