[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inkbox-mail"
version = "0.1.0"
description = "Python SDK for the Inkbox Mail API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://inkbox.ai"
Repository = "https://github.com/vectorlyapp/inkbox/tree/main/inkbox/python"
"Bug Tracker" = "https://github.com/vectorlyapp/inkbox/issues"

[tool.hatch.build.targets.wheel]
packages = ["inkbox_mail"]
